# memAlpha

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SCRATCHPAD_FEATURE.md  llm.txt  pyproject.toml
.github/: SETUP.md
.github/workflows/: test-and-merge.yml  test-main.yml
src/: __init__.py  embeddings.py  memory_store.py  models.py  scratchpad_store.py  server.py
tests/: __init__.py  conftest.py  test_bdd_steps.py  test_embeddings.py  test_memory_store.py  test_models.py  test_scratchpad.py
tests/features/: agent_memory_management.feature  team_collaboration.feature
